--- a/DestinoCerto/DestinoCerto/Views/User/Register.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/User/Register.cshtml
@@ -33,7 +33,8 @@
 
         <div class="inputRow">
             <strong>Confirmar Senha:</strong>
-            <input type="password" id="confirmSenha" name="ConfirmSenha" class="form-control" />
+            @Html.PasswordFor(model => model.Senha)
+            @Html.ValidationMessageFor(model => model.Senha)
         </div>
 
         <div class="inputRow">
@@ -65,7 +66,7 @@
         </div>
 
         <div class="areaBtn">
-            <button type="submit" class="spin-animation" id="submitBtn">Register</button>
+            <button type="submit" id="submitBtn">Registar Usuário</button>
         </div>
         }
     </div>
