--- a/DestinoCerto/DestinoCerto/Views/Home/Index.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/Home/Index.cshtml
@@ -8,7 +8,10 @@
 <body>
     <div class="container_Master">
         <div class="container_Cadastro">
-            <h1>Olá, seja bem-vindo ao Destino Certo!</h1>
+            <div class="header">
+                <span>Bem-vindo ao Destino Certo!</span>
+            </div>
+            
             <h2>Login</h2>
             <form class="container_Form">
 
@@ -21,7 +24,7 @@
                     <label>Senha</label>
                     <input type="password" placeholder="Digite sua senha: " />
                 </div>
-                <input type="submit" value="Confrimar"/>
+                <button class="btnConfirm">Confirmar</button>
                 <h4>Primeria vez aqui? faça seu <a href="/user/register">cadastro</a>!</h4>
             </form>
         </div>
