--- a/DestinoCerto/DestinoCerto/Content/Site.css
+++ b/DestinoCerto/DestinoCerto/Content/Site.css
@@ -1,7 +1,12 @@
-﻿body{
-    font-family: sans-serif;
-    padding: 0;
+﻿* {
+    color: #000000;
     margin: 0;
+    padding: 0;
+    /*font-family: 'Roboto Flex', sans-serif;*/
+    font-family: Courier New,Courier,monospace;
+}
+
+body {
     background-image: url("https://meadhunt.com/wp-content/uploads/future-of-transpo-1200x675-1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -15,20 +20,33 @@
     justify-content: center;
 }
 
-.container_Cadastro{
+.container_Cadastro {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50vw;
-    background-color: rgba(255, 255, 255, 0.3);
+    justify-content: center;
+    width: auto;
+    background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(10px);
     border-radius: 10px;
-    height: 50vh;
+    height: auto;
+    border: 1px solid black;
+    box-shadow: 0 0 15px #0009;
     /* text-shadow: 0px 0px 10px white; */
+    padding: 1.5vw;
 }
 
 .container_Cadastro h2{
     font-size: 2rem;
+    margin-top:1rem;
+}
+
+.container_Cadastro .header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.5rem;
+    font-weight:700;
 }
 
 .container_Form{
@@ -41,11 +59,37 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 1.5rem;
+    margin: 0.5rem;
+    margin-top:1rem;
 }
 
 .div_Form label{
     font-size: 1.5rem;
+    font-weight: 700;
 }
 
+.div_Form input{
+    border-radius: 1rem;
+    padding: 0.5rem;
+    max-width: 380px;
+    border-radius: 2rem;
+    font-size: 14px;
+    outline-color: #48efe0;
+}
+
+.btnConfirm {
+    padding: 10px;
+    background-color: #00d222;
+    color: #fff;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-weight: 700;
+}
+
+.btnConfirm:hover{
+    background-color: #00bb1f
+}
 
