--- a/DestinoCerto/DestinoCerto/Views/Transport/Register.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/Transport/Register.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Register Transport</title>
-    <link href="/Content/styles.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/Cadastro.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/validations.js"></script>
 </head>
 <body>
