Att mais recentes
Co-Authored-By: Anthony Mendes da silva <83890123+anthonymds@users.noreply.github.com>

--- a/DestinoCerto/DestinoCerto/Views/Home/Index.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 
                 <div class="div_Form">
                     <label>Senha</label>
-                    <input type="password" placeholder="Digite sua senha: " />
+                    <input type="password" placeholder="Digite sua senha " />
                 </div>
                 <button class="btnConfirm">Confirmar</button>
                 <h4>Primeria vez aqui? faça seu <a href="/user/register">cadastro</a>!</h4>
