--- a/DestinoCerto/DestinoCerto/Views/User/Menu.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/User/Menu.cshtml
@@ -1,1 +1,23 @@
-﻿
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <link href="..//Content/Site.css" rel="stylesheet" type="text/css" />
+    <title>Menu</title>
+    <link href="/Content/styles.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+    <div class="box">
+        <div class="areaBtn">
+            <h2>Menu</h2>
+        </div>
+        <div class="menuBtn">
+            <button onclick="location.href='/User/Register'" type="button">Cadastro de usuário</button>
+            <button onclick="location.href='/Passenger/Register'" type="button">Cadastro de passageiros</button>
+            <button onclick="location.href='/Driver/Register'" type="button">Cadastro de motorista</button>
+            <button onclick="location.href='/Vehicle/Register'" type="button">Cadastro de veículo</button>
+            <button onclick="location.href='/Transport/Register'" type="button">Registro do transporte</button>
+            <button onclick="location.href='/FinancialReport/Index'" type="button">Relatório Financeiro</button>
+        </div>
+    </div>
+</body>
+</html>
