--- a/DestinoCerto/DestinoCerto/Views/User/Menu.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/User/Menu.cshtml
@@ -16,7 +16,7 @@
             <button onclick="location.href='/Driver/Register'" type="button">Cadastro de motorista</button>
             <button onclick="location.href='/Vehicle/Register'" type="button">Cadastro de veículo</button>
             <button onclick="location.href='/Transport/Register'" type="button">Registro do transporte</button>
-            <button onclick="location.href='/FinancialReport/Index'" type="button">Relatório Financeiro</button>
+            <button onclick="location.href='/FinancialReport/RelatorioFinanceiro'" type="button">Relatório Financeiro</button>
         </div>
     </div>
 </body>
