--- a/DestinoCerto/DestinoCerto/Views/Transport/Register.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/Transport/Register.cshtml
@@ -5,11 +5,12 @@
     <title>Register Transport</title>
     <link href="~/Content/Cadastro.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/validations.js"></script>
+    <link href="~/Content/RegisterError.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="box">
         <div class="areaBtn">
-            <h2>Register Transport</h2>
+            <h2>Registrar Transporte</h2>
         </div>
         @using (Html.BeginForm("Register", "Transport", FormMethod.Post))
         {
