--- a/DestinoCerto/DestinoCerto/Views/User/Register.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/User/Register.cshtml
@@ -5,11 +5,12 @@
     <title>Register</title>
     <link href="~/Content/Cadastro.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/validations.js"></script>
+    <link href="~/Content/RegisterError.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="box">
         <div class="areaBtn">
-            <h2>Register</h2>
+            <h2>Registrar Usuário</h2>
         </div>
         @using (Html.BeginForm("Register", "User", FormMethod.Post))
         {
