--- a/DestinoCerto/DestinoCerto/Views/Vehicle/Register.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/Vehicle/Register.cshtml
@@ -5,11 +5,12 @@
     <title>Register Vehicle</title>
     <link href="~/Content/Cadastro.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/validations.js"></script>
+    <link href="~/Content/RegisterError.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="box">
         <div class="areaBtn">
-            <h2>Register Vehicle</h2>
+            <h2>Registrar Veículo</h2>
         </div>
         @using (Html.BeginForm("Register", "Vehicle", FormMethod.Post))
         {
