--- a/DestinoCerto/DestinoCerto/Views/Driver/Register.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/Driver/Register.cshtml
@@ -36,6 +36,7 @@
                 <button type="submit" id="submitBtn">Cadastrar Moorista</button>
             </div>
         }
+        <button class="voltar_butao" onclick="location.href='/User/Menu'" type="button">Voltar</button>
     </div>
 </body>
 </html>
