--- a/DestinoCerto/DestinoCerto/Views/FinancialReport/RelatorioFinanceiro.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/FinancialReport/RelatorioFinanceiro.cshtml
@@ -55,6 +55,7 @@
         {
             <p>Nenhum transporte registrado.</p>
         }
+        <button class="voltar_butao" onclick="location.href='/User/Menu'" type="button">Voltar</button>
     </div>
 </body>
 </html>
