--- a/DestinoCerto/DestinoCerto/Views/Transport/Register.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/Transport/Register.cshtml
@@ -54,6 +54,7 @@
                 <button type="submit" id="submitBtn">Register Transport</button>
             </div>
         }
+        <button class="voltar_butao" onclick="location.href='/User/Menu'" type="button">Voltar</button>
     </div>
 </body>
 </html>
