--- a/DestinoCerto/DestinoCerto/Views/Vehicle/Register.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/Vehicle/Register.cshtml
@@ -60,6 +60,7 @@
                 <button type="submit" id="submitBtn">Registar Veículo</button>
             </div>
         }
+        <button class="voltar_butao" onclick="location.href='/User/Menu'" type="button">Voltar</button>
     </div>
 </body>
 </html>
