--- a/DestinoCerto/DestinoCerto/Views/User/Register.cshtml
+++ b/DestinoCerto/DestinoCerto/Views/User/Register.cshtml
@@ -14,62 +14,63 @@
         </div>
         @using (Html.BeginForm("Register", "User", FormMethod.Post))
         {
-        <div class="inputRow">
-            <strong>Nome:</strong>
-            @Html.EditorFor(model => model.Nome)
-            @Html.ValidationMessageFor(model => model.Nome)
-        </div>
+            <div class="inputRow">
+                <strong>Nome:</strong>
+                @Html.EditorFor(model => model.Nome)
+                @Html.ValidationMessageFor(model => model.Nome)
+            </div>
 
-        <div class="inputRow">
-            <strong>Email:</strong>
-            @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
-        </div>
+            <div class="inputRow">
+                <strong>Email:</strong>
+                @Html.EditorFor(model => model.Email)
+                @Html.ValidationMessageFor(model => model.Email)
+            </div>
 
-        <div class="inputRow">
-            <strong>Senha:</strong>
-            @Html.PasswordFor(model => model.Senha)
-            @Html.ValidationMessageFor(model => model.Senha)
-        </div>
+            <div class="inputRow">
+                <strong>Senha:</strong>
+                @Html.PasswordFor(model => model.Senha)
+                @Html.ValidationMessageFor(model => model.Senha)
+            </div>
 
-        <div class="inputRow">
-            <strong>Confirmar Senha:</strong>
-            @Html.PasswordFor(model => model.Senha)
-            @Html.ValidationMessageFor(model => model.Senha)
-        </div>
+            <div class="inputRow">
+                <strong>Confirmar Senha:</strong>
+                @Html.PasswordFor(model => model.Senha)
+                @Html.ValidationMessageFor(model => model.Senha)
+            </div>
 
-        <div class="inputRow">
-            <strong>Data de Nascimento:</strong>
-            <input type="date" id="dtNascimento" name="DtNascimento" class="form-control" />
-        </div>
+            <div class="inputRow">
+                <strong>Data de Nascimento:</strong>
+                <input type="date" id="dtNascimento" name="DtNascimento" class="form-control" />
+            </div>
 
-        <div class="inputRow">
-            <strong>CPF:</strong>
-            @Html.TextBoxFor(model => model.Cpf, new
-            {
-                id = "CPF",
-                maxlength = 14,
-                oninput = "formatarCPF(this)"
-            })
-            @Html.ValidationMessageFor(model => model.Cpf)
-        </div>
+            <div class="inputRow">
+                <strong>CPF:</strong>
+                @Html.TextBoxFor(model => model.Cpf, new
+                {
+                    id = "CPF",
+                    maxlength = 14,
+                    oninput = "formatarCPF(this)"
+                })
+                @Html.ValidationMessageFor(model => model.Cpf)
+            </div>
 
-        <div class="inputRow">
-            <strong>Telefone:</strong>
-            @Html.EditorFor(model => model.Telefone)
-            @Html.ValidationMessageFor(model => model.Telefone)
-        </div>
+            <div class="inputRow">
+                <strong>Telefone:</strong>
+                @Html.EditorFor(model => model.Telefone)
+                @Html.ValidationMessageFor(model => model.Telefone)
+            </div>
 
-        <div class="inputRow">
-            <strong>Endereço:</strong>
-            @Html.EditorFor(model => model.Endereco)
-            @Html.ValidationMessageFor(model => model.Endereco)
-        </div>
+            <div class="inputRow">
+                <strong>Endereço:</strong>
+                @Html.EditorFor(model => model.Endereco)
+                @Html.ValidationMessageFor(model => model.Endereco)
+            </div>
 
-        <div class="areaBtn">
-            <button type="submit" id="submitBtn">Registar Usuário</button>
-        </div>
+            <div class="areaBtn">
+                <button type="submit" id="submitBtn">Registar Usuário</button>
+            </div>
         }
+        <button class="voltar_butao" onclick="location.href='/User/Menu'" type="button">Voltar</button>
     </div>
 </body>
 </html>
